Project

General

Profile

Actions

Bug #42345

closed

OSD: When object compression ratio is high(but less than “bluestore_compression_required_ratio”), compression did not work

Added by Fengzhe Han over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Version: nautilus

I set value “.98” to “bluestore_compression_required_ratio”. Then put some objects into the cluster by rbd. The compress-type is zlib, and the object’s compression-rate is 93% more or less.But compression did not work.

I observed “ceph daemon osd.0 perf dump | grep bluestore”, and the relevant value didn’t change. Then I wrote some log to the source code and rebuild the Ceph projects.The log-print showed that the soft flow didn’t enter compression-path.

Actions #1

Updated by Fengzhe Han over 4 years ago

Fengzhe Han wrote:

Version: nautilus

I set value “.98” to “bluestore_compression_required_ratio”. Then put some objects into the cluster by rbd. The compress-type is zlib, and the object’s compression-rate is 93% more or less.But compression did not work.

I observed “ceph daemon osd.0 perf dump | grep bluestore”, and the relevant value didn’t change. Then I wrote some log to the source code and rebuild the Ceph projects.The log-print showed that the soft flow didn’t enter compression-path.

The parameters which I set :
bluestore_compression_algorithm = zlib
bluestore_compression_mode = force
bluestore_compression_required_ratio = .98

Actions #2

Updated by Vikhyat Umrao over 4 years ago

  • Project changed from RADOS to bluestore
Actions #3

Updated by Igor Fedotov over 4 years ago

  • Status changed from New to Need More Info

would you please set debug bluestore to 20, repeat the test and share the log? Thanks!

Actions #4

Updated by Igor Fedotov over 4 years ago

also please note that compression makes sense for writes that are at least 2x times as large as bluestore_min_alloc_size (16K/64K for SSD/HDD respectively). Smaller writes don't pass via compression path.

Actions #6

Updated by Josh Durgin over 4 years ago

  • Status changed from Need More Info to Closed

Sounds like there wasn't a bug here, just some confusion about config meaning.

Actions

Also available in: Atom PDF